// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'basilisk' to 'karura' using bridgeSDK cross-chain 'BSX' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 985)",
  "toChain": "(rounded 1.94)",
}
`;

exports[`'basilisk' to 'karura' using bridgeSDK cross-chain 'BSX' > fee 1`] = `"(rounded 0.06)"`;

exports[`'basilisk' to 'karura' using bridgeSDK cross-chain 'BSX' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 1000,
  "toChain": 0,
}
`;
